workspace = { members = ["examples"] }
[package]
name = "polysite"
version = "0.0.2"
edition = "2021"

authors = ["CHISEN Kaoru <cordx56@cordx.cx>"]
description = "Highly customizable, polymorphic static site generator library"
readme = "README.md"
repository = "https://github.com/cordx56/polysite"
license = "MPL-2.0"
keywords = ["static", "web", "site", "generator", "blog"]
include = ["/src", "/examples", "README.md", "LICENSE"]

[dependencies]
tokio = { version = "1", features = ["full"] }
glob = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tera = "1"
fronma = "0.2"
pulldown-cmark = "0.9"
log = "0.4"
tracing-error = "0.2"
tracing = "0.1"
dyn-clone = "1"

[dev-dependencies]
simple_logger = "4"
tracing-subscriber = "0.3"
