[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
polysite = { path = "../" }
tokio = { version = "1", features = ["full"] }
simple_logger = "4"

[[example]]
name = "simple_markdown"
path = "simple_markdown.rs"

[[example]]
name = "concurrency_test"
path = "concurrency_test.rs"

[[example]]
name = "snapshot"
path = "snapshot.rs"
