[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
polysite = { path = "../" }
tokio = { version = "1", features = ["full"] }
simple_logger = "4"
tracing-error = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "simple_markdown"
path = "simple_markdown.rs"

[[example]]
name = "concurrency_test"
path = "concurrency_test.rs"

[[example]]
name = "snapshot"
path = "snapshot.rs"

[[example]]
name = "practical_example"
path = "practical_example.rs"
